--- a/IMDeveloper/res/layout/activity_searchandmakegroup.xml
+++ b/IMDeveloper/res/layout/activity_searchandmakegroup.xml
@@ -78,6 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_marginTop="20dp"
             android:text="您没有创建或加入任何群组!"
             android:textColor="#b3b3b3"
             android:textSize="17sp"
