--- a/IMDeveloper/res/drawable/im_drawable_time_bg.xml
+++ b/IMDeveloper/res/drawable/im_drawable_time_bg.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle" >
 
     <!-- 填充的颜色 -->
-    <solid android:color="#9e9e9e" />
+    <solid android:color="#d4d4d4" />
     <!-- 设置矩形的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="16dip" />
+    <corners android:radius="6dip" />
 
 </shape>
