--- a/IMDeveloper/res/layout/im_chatview_image.xml
+++ b/IMDeveloper/res/layout/im_chatview_image.xml
@@ -5,7 +5,7 @@
     android:background="#000"
     android:orientation="vertical" >
 
-    <imsdk.data.mainphoto.IMChatImageView
+    <imsdk.views.IMChatImageView
         android:id="@+id/imimg_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,6 +17,5 @@
         android:layout_height="36dp"
         android:layout_centerInParent="true"
         android:visibility="gone" />
-
 
 </RelativeLayout>
